# mikelgg93

./: .biomeignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  biome.json  citations.json  decypher.sh  ggscholar_graph.py  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts
.github/workflows/: deploy.yml  update_img_scholar.yml
app/: globals.css  layout.tsx  page.tsx
app/contact/: page.tsx
app/education/: page.tsx
app/experience/: page.tsx
app/projects/: page.tsx
app/publications/: page.tsx
components/: RouteLoader.tsx  citationsChart.tsx  header.tsx  signature.tsx
components/data/: RESUME.json.gpg  citations.json
components/ui/: button.tsx  card.tsx  carousel.tsx  command-menu.tsx
portfolio/: .biomeignore  README.md  astro.config.mjs  biome.json  components.json  cypher.sh  decypher.sh  package.json  tsconfig.json
portfolio/public/: CNAME  citations.json  es-resume.json.gpg  resume.json.gpg
portfolio/src/: content.config.ts  env.d.ts
portfolio/src/components/: BlogFeatures.tsx  CitationsChart.tsx  Footer.astro  Header.astro  LanguageToggle.tsx  MobileMenu.tsx  PretextText.tsx  RouteLoader.astro  ShortcutsModal.tsx  Signature.astro  Signature.module.css  ThemeToggle.tsx  WebGLEye.tsx  WebGLShader.tsx
portfolio/src/content/blog/: color-perception-es.mdx  color-perception.mdx  first-entry-es.mdx  first-entry.mdx  quirks-visual-system-es.mdx  quirks-visual-system.mdx  understanding-retinal-defocus-es.mdx  understanding-retinal-defocus.mdx
portfolio/src/layouts/: BlogLayout.astro  Layout.astro
portfolio/src/pages/: 404.astro  index.astro
portfolio/src/pages/blog/: [...slug].astro  index.astro
portfolio/src/pages/es/: index.astro
portfolio/src/pages/es/blog/: [...slug].astro  index.astro
portfolio/src/styles/: global.css
public/: CNAME
scrapper/: .pre-commit-config.yaml  makefile  pyproject.toml
scrapper/src/scholar/: __init__.py  main.py  playwright.py  plot.py
scrapper/tests/: conftest.py  test_cli.py  test_plot.py
